<resources>
    <string name="app_name">Phone Bond</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Chart</string>
    <string name="menu_slideshow">Categories</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Log Out</string>
    <string name="price">Price =</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="add_new_product">ADD NEW PRODUCT</string>
    <string name="submit_product">Submit Product</string>
    <string name="bond_name_and_location">Bond name and location..</string>
    <string name="car_colour">Car Colour....</string>
    <string name="description_model_etc">Description,Model,etc..</string>
    <string name="car_price">Car price....</string>
    <string name="car_name">Car Name....</string>
    <string name="your_order">Your Order has been placed Successfully. wait for Verification..</string>
    <string name="admin_logout">Admin logout</string>
    <string name="check_client_orders">Check Client Orders</string>
    <string name="product_colour">Product colour</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
