<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyer.ChartActivity">

    <RelativeLayout
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/chart_price_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/White"
            android:textSize="20dp" />

    </RelativeLayout>

            <TextView
                android:id="@+id/msg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_order"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:visibility="gone"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                tools:ignore="HardcodedText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recycle_next"
        android:layout_width="match_parent"
        android:layout_height="416dp"
        android:layout_below="@id/Relative"
        android:layout_marginTop="-3dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/Next_btn"
        android:layout_width="408dp"
        android:layout_height="56dp"
        android:layout_below="@id/Recycle_next"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimary"
        android:text="@string/confirm_order"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold|italic" />



</RelativeLayout>